# fcc-DA-Mean-Variance-Standard-Deviation-Calculator

./: README.md  mean_var_std.py  pyproject.toml
docs/: README.md
