[tool.poetry]
name = "Mean-Variance-Standard-Deviation-Calculator"
version = "0.1.0"
description = "To demonstrate my ability to use the core knowledge I have learned in this course, I had to construct a Mean Variance Standard Deviation Calculator project in order to complete the Data Analysis With Python course offered by freecodecamp.org."
authors = ["Bagus Perdana Yusuf <baguspyus@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<3.12"
numpy = "^2.1.2"

[tool.pyright]
# https://github.com/microsoft/pyright/blob/main/docs/configuration.md
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
# https://beta.ruff.rs/docs/configuration/
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"